<resources>
    <string name="app_name">BiltegiApp</string>
    <string name="aplikazioLogoa">Aplikazioaren logotipoa</string>
    <string name="back" translatable="false">⬅</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>

    <string name="titleUsers">Erablitzaileak</string>
    <string name="txteditProduct">Produktua editatu</string>
    <string name="txtProfile">Profilak</string>
    <string name="txtAlbaran">Albaranak</string>
    <string name="txtInventory">Biltegia</string>

    <string name="txtName">Izena</string>
    <string name="txtSurname">Abizena</string>
    <string name="txtNan">NAN</string>
    <string name="txtEmail" translatable="false">Email</string>
    <string name="txtPassword">Pasahitza</string>
    <string name="txtCif" translatable="false">CIF</string>
    <string name="txtType">Mota</string>
    <string name="txtAmount">Kantitatea</string>
    <string name="txtAmountQuan">Gutxieneko kantitatea</string>
    <string name="txtAdmin">Administratzailea</string>
    <string name="txtEnable">Gaitu</string>
    <string name="txtPaid">Ordainduta</string>
    <string name="txtCreatedDate">Sortze-data</string>
    <string name="txtPaidedDate">Ordainketa-data</string>

    <string name="txtnewProduct">Produktu berria</string>
    <string name="txtnewProfile">Profil berria</string>
    <string name="txtseeProfile">Profil berria</string>
    <string name="txtnewAlbaran">Albaran berria</string>
    <string name="txtseeAlbaran">Ikusi albarana</string>
    <string name="txtbtnSave">Gorde</string>
    <string name="txtbtnBack">Atzera</string>
    <string name="txtbtnDelete">Ezabatu</string>
    <string name="txtbtnCheck">Egiaztatu</string>
    <string name="txtYes">Bai</string>
    <string name="txtNo">Ez</string>

    <string name="searchUser"> Bilatu erabiltzailea...</string>
    <string name="searchProduct"> Bilatu produktua...</string>
    <string name="searchAlbaran"> Bilatu albaran...</string>
    <string name="txtMessageDelete">Ziur zaude?</string>
    <string name="txtMessageAlert">Aukeratu zure erabiltzailea</string>

    <string-array name="enable_options">
        <item>Guztiak</item>
        <item>Gaituta</item>
        <item>Ez gaituta</item>
    </string-array>

    <string-array name="type_options">
        <item>Guztiak</item>
        <item>Administratzailea</item>
        <item>Langilea</item>
    </string-array>

    <string-array name="product_type_options">
        <item>Guztiak</item>
        <item>Edaria</item>
        <item>Janaria</item>
    </string-array>

    <string-array name="albaran_paid_options">
        <item>Guztiak</item>
        <item>Ordainduta</item>
        <item>Ordaindu gabe</item>
    </string-array>

    <string-array name="inventory_sort_options">
        <item>Guztiak</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Kantitate gehienez gutxienez</item>
        <item>Kantitate gutxienez gehienez</item>
    </string-array>

    <string-array name="date_filter_options">
        <item>Guztiak</item>
        <item>Egun 1</item>
        <item>Aste 1</item>
        <item>Hilabete 1</item>
    </string-array>

    <string-array name="lang_options" translatable="false">
        <item>EU</item>
        <item>ES</item>
    </string-array>

</resources>