<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/style">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/txtEmail"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_style"/>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_style"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnCheck"
        android:backgroundTint="@color/blue_dark"
        />
    <Button
        android:id="@+id/btnBack"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnBack"
        android:backgroundTint="@color/blue_dark"
        />
    </LinearLayout>
</LinearLayout>