<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.Profile.ProfileActivity">
    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/btnBackMain"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:padding="0dp"
        android:backgroundTint="@color/blue_dark"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtProfile"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/blue_primary"
        android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/head"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@drawable/style"/>
        <Spinner
            android:id="@+id/spinnerEnabled"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/style"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:queryHint="Bilatu erabiltzailea..."
            android:background="@drawable/style"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        android:layout_marginStart="20sp"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/rvProfile"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/plus"
        android:backgroundTint="@color/blue_dark" />
</androidx.constraintlayout.widget.ConstraintLayout>