<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <TextView
            android:id="@+id/titleMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleUsers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/blue_primary"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/titleMain"

            />

        <!--android:visibility="invisible"-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerFilters"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/rvUsers"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <LinearLayout
                android:id="@+id/filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <Spinner
                    android:id="@+id/filterQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:background="@drawable/style"
                    />
                <Spinner
                    android:id="@+id/filterDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:visibility="invisible"
                    android:background="@drawable/style"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchProduct"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:iconifiedByDefault="false"
                    app:queryHint="Bilatu produktua..."
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/style"
                    />
                <ImageButton
                    android:id="@+id/btnMenu"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/menu"
                    android:scaleType="centerInside"
                    android:background="?attr/selectableItemBackgroundBorderless" />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/filters"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="20dp"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                    android:id="@+id/kantAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                        <TextView
                            android:id="@+id/txtCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="30dp"
                            android:textColor="@color/blue_primary"
                        />
                        <Button
                            android:id="@+id/btnAdd"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/plus"
                            android:textSize="40sp"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:padding="0dp"
                            app:cornerRadius="40dp"
                            android:visibility="invisible"
                            android:backgroundTint="@color/blue_dark"
                             />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvProducts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
<com.google.android.material.navigation.NavigationView
    android:id="@+id/menu"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btneditProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txteditProduct"
            android:backgroundTint="@color/blue_dark"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
        <Button
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtProfile"
            android:backgroundTint="@color/blue_dark"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
        <Button
            android:id="@+id/btnAlbaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAlbaran"
            android:backgroundTint="@color/blue_dark"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
        <Button
            android:id="@+id/btnInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtInventory"
            android:backgroundTint="@color/blue_dark"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>

</com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>